# ITAutomationReports

./: main.py  pyproject.toml
src/itautomationreports/: comparision.py  data_loader.py  filters.py  visualization.py
tests/: test_comaprison.py  test_filters.py  test_loader.py  test_visualization.py
