[project]
name = "itautomationreports"
version = "0.1.0"
description = "Multi-Report Ticket Analysis Dashboard"
authors = [{ name = "Your Name", email = "your_email@example.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2.0.0",
    "streamlit>=1.20.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.2",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "squarify (>=0.4.4,<0.5.0)",
    "plotly (>=6.0.0,<7.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["itautomationreports"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"